# panda-guard

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  FAST_EVAL_INFO.md  LICENSE  README.md  README_zh_CN.md  pyproject.toml  requirements.txt
benchmarks/alpaca_eval/Qwen_Qwen2-7B-Instruct/IclDefender/: config.yaml  results.json
configs/: default.yaml  judge.yaml  llms.yaml  test.yaml
configs/attacks/: autodan.yaml  cold.yaml  deepinception.yaml  gcg.yaml  gptfuzz.yaml  ica.yaml  overload.yaml  pair.yaml  past_tense.yaml  random_search.yaml  renellm.yaml  scav.yaml  tap.yaml
configs/attacks/rewrite/: art_prompt.yaml  gpt4_cipher.yaml
configs/attacks/transfer/: aim.yaml  anti_gpt_v2.yaml  better_dan.yaml  dev_mode_ranti.yaml  dev_mode_v2.yaml  future.yaml  gcg.yaml  ica.yaml  new_art_prompt.yaml  new_autodan.yaml  new_cold.yaml  new_deepinception.yaml  new_gcg.yaml  new_gpt4_cipher.yaml  new_gptfuzzer.yaml  new_ica.yaml  new_pair.yaml  new_random_search.yaml  new_renellm.yaml  new_scav.yaml  new_tap.yaml  original.yaml  pair.yaml  past.yaml  prompt_with_random_search.yaml
configs/defenses/: goal_priority.yaml  gradsafe.yaml  icl.yaml  none.yaml  paraphrase.yaml  perplexity_filter.yaml  repe.yaml  rpo.yaml  self_defense.yaml  self_reminder.yaml  semantic_smoothllm.yaml  smoothllm.yaml
configs/defenses/llm_gen/: alpaca_eval.yaml  jbb.yaml
configs/defenses/llms/: DeepSeek-V3-0324.yaml  DeepSeek-V3.yaml  ahm-Phi-3-5-MoE-instruct.yaml  aihubmix-Llama-3-1-405B-Instruct.yaml  aihubmix-Mistral-Large-2411.yaml  baichun3-turbo.yaml  baichun4-air.yaml  baichun4-turbo.yaml  baichun4.yaml  claude-3-5-haiku-20241022.yaml  claude-3-5-sonnet-20241022.yaml  claude-3-7-sonnet-20250219.yaml  deepseek-r1-distill-llama-70b.yaml  deepseek-reasoner.yaml  doubao-1.5-lite.yaml  doubao-1.5-pro.yaml  doubao-lite.yaml  doubao-pro.yaml  gemini-2-flash-lite.yaml  gemini-2-flash-thinking.yaml  gemini-2-flash.yaml  gemini-2-pro.yaml  gemma-3-27b-it.yaml  glm-3-turbo.yaml  glm-4-flash.yaml  glm-4-plus.yaml  glm-4.yaml  gpt-4o-2024-08-06.yaml  gpt-4o-2024-11-20.yaml  gpt-4o-mini.yaml  grok-2-1212.yaml  kimi-latest.yaml  llama3.1-8b-it.yaml  llama3.2-1b-it.yaml  moonshot-v1-8k.yaml  o3-mini.yaml  phi-3-mini-it.yaml  qwen-max-0125.yaml  qwen2.5-72b-it.yaml  vllm_gemma-2-27b-it.yaml  (+24 more)
configs/defenses/original/: self_defense.yaml  semantic_smoothllm.yaml
configs/defenses/reversed/: gradsafe.yaml
configs/defenses/temp/: paraphrase.yaml  perplexity_filter.yaml  rpo.yaml  semantic_smoothllm.yaml  smoothllm.yaml
configs/judges/: judge.yaml
configs/repe/: llm_gen.yaml  llms.yaml  llms_all_layers.yaml  repe.yaml  sparse.yaml
configs/tasks/: advbench.yaml  alpaca_eval.yaml  chat.yaml  jbb.yaml
data/: Out_86.csv  advbench_harmful_behaviors.csv  format_jbb.py  jbb_expanded.csv
data/AttackResults/prompts/: art_prompt.csv  autodan.csv  cold.csv  deepinception.csv  gcg.csv  gpt4_cipher.csv  gptfuzzer.csv  ica.csv  pair.csv  random_search.csv  renellm.csv  scav.csv  tap.csv  template.csv
data/AttackResults/token_usage/: art_prompt.csv  autodan.csv  cold.csv  deepinception.csv  gcg.csv  gpt4_cipher.csv  gptfuzzer.csv  ica.csv  pair.csv  random_search.csv  renellm.csv  scav.csv  tap.csv
data/SCAV/: optimized_instructions_70b.csv
data/past_tense/: tense_future.json  tense_past.json
docs/source/: conf.py  index.rst  jailbreakpipe.role.attacks.rst  jailbreakpipe.role.defenses.repe_utils.rst  jailbreakpipe.role.defenses.rst  jailbreakpipe.role.rst  jailbreakpipe.rst  modules.rst  panda_guard.cli.rst  panda_guard.llms.rst  panda_guard.pipelines.rst  panda_guard.role.attacks.cold_attack.rst  panda_guard.role.attacks.gptfuzzer_attack.fuzzer.rst  panda_guard.role.attacks.gptfuzzer_attack.rst  panda_guard.role.attacks.gptfuzzer_attack.utils.rst  panda_guard.role.attacks.renellm_attack.rst  panda_guard.role.attacks.rst  panda_guard.role.defenses.repe_utils.rst  panda_guard.role.defenses.rst  panda_guard.role.judges.rst  panda_guard.role.rst  panda_guard.rst
examples/: alpaca_eval_inference.py  alpaca_eval_leaderboard.py  analysis.ipynb  analysis.py  jbb_eval.py  jbb_inference.py  panda-bench.croissant.json  repe_test.ipynb  run_batch_inference.py  sort_benchmark.py
examples/alpaca_eval-baselines/: alpaca_eval.py  alpaca_inference.py  proxy_balance.py  run_all_inference.py
examples/baselines/: alpaca_eval_inference.py  jbb_gen.py
examples/baselines_old/: alpaca_eval_inference.py  jbb_inference.py  run_batch_inference.py
examples/jailbreak-baselines/: jbb_eval.py  jbb_inference.py  run_all_inference.py
examples/repe/: alpaca_eval_inference.py  jbb_gen.py  repe_test.ipynb
examples/test/: jbb_test.py
jailbreakpipe/: utils.py
jailbreakpipe/llms/: __init__.py  base.py  hf.py  llm_registry.py  oai.py  repe.py
jailbreakpipe/llms/repe_utils/: __init__.py  pipelines.py  rep_control_pipeline.py  rep_control_reading_vec.py  rep_reading_pipeline.py
jailbreakpipe/pipelines/: __init__.py  inference.py
jailbreakpipe/role/: __init__.py
jailbreakpipe/role/attacks/: __init__.py  art_prompt.py  attacker_registry.py  base.py  cold.py  deepinception.py  gcg.py  gpt4_cipher.py  gptfuzz.py  ica.py  overload.py  pair.py  random_search.py  renellm.py  rewrite.py  scav.py  tap.py  transfer.py
jailbreakpipe/role/defenses/: __init__.py  back_translate.py  base.py  defender_registry.py  goal_priority.py  gradsafe.py  icl.py  paraphrase.py  perplexity_filter.py  repe.py  rewrite.py  rpo.py  self_defense.py  semantic_smoothllm.py  smoothllm.py
jailbreakpipe/role/judges/: __init__.py  base.py  judge_registry.py  llm_based.py  rule_based.py
src/panda_guard/: __init__.py  utils.py
src/panda_guard/cli/: attack.py  chat.py  eval.py  inference.py  main.py  serve.py
src/panda_guard/llms/: __init__.py  base.py  claude.py  gemini.py  hf.py  oai.py  ollama_llm.py  sglang_llm.py  vllm.py  vllm_llm.py
src/panda_guard/pipelines/: __init__.py  inference.py
src/panda_guard/role/: __init__.py
tests/: .gitignore  test_attacks.py  test_defenses.py  test_judges.py  test_llms.py
(+2523 files in other folders)
